apps/blog/src/app.css
/* Explicitly import only this project root's src to not bundle unneeded styles */
/* from other monorepo subprojects. `lib/` imported in the root `app.css`. */
@import "tailwindcss" source("../src");
@import "../../lib/app.css";
@import "./callouts.css";

@plugin "@tailwindcss/typography";

span.icon-link::before {
    content: "#";
    color: hsl(var(--accent));
    position: absolute;
    left: -23px;
    opacity: 0;
    transition: opacity 0.3s ease;
}

h2:hover span.icon-link::before,
h3:hover span.icon-link::before,
h4:hover span.icon-link::before {
    opacity: 1;
}

h2,
h3,
h4 {
    position: relative;
}

.toc {
    @apply ml-4 hidden p-3 sm:block sm:basis-1/4;
}

.toc-link {
    @apply mb-3 inline-block;
}

.toc-level {
    @apply sm:sticky sm:top-48 sm:max-h-[calc(100vh-16rem)] sm:overflow-y-auto;
}

.toc-level-2,
.toc-level-3,
.toc-level-4 {
    @apply ml-3;
}

nav > :last-child.toc-level {
    @apply mb-0;
}

